--- a/src/app/nav/nav-bar.component.html
+++ b/src/app/nav/nav-bar.component.html
@@ -7,11 +7,11 @@
     <div class="collapse navbar-collapse">
       <ul class="nav navbar-nav">
         <li>
-          <a [routerLink] = "['/events']" routerLinkActive = "active"
-          [routerLinkActiveOptions] = "{exact: true}">All Events</a>
+          <a [routerLink]="['/events']" routerLinkActive="active"
+            [routerLinkActiveOptions]="{exact: true}">All Events</a>
         </li>
-        <li><a [routerLink]="['/events/new']" routerLinkActive = "active"
-          [routerLinkActiveOptions] = "{exact: true}">Create Event</a></li>
+        <li><a [routerLink]="['/events/new']" routerLinkActive="active"
+            [routerLinkActiveOptions]="{exact: true}">Create Event</a></li>
         <li class="dropdown">
           <a href="#" class="dropdown-toggle" data-toggle="dropdown">
             Events
@@ -27,14 +27,19 @@
       <div class="navbar-header navbar-right">
         <ul class="nav navbar-nav">
           <li>
-            <a *ngIf="!auth.isAuthenticated()" [routerLink]="['/user/login']" >Login</a>
-            <a *ngIf="auth.isAuthenticated()" [routerLink]="['/user/profile']"  >Welcome {{auth.currentUser.username}}</a>
+            <a *ngIf="!auth.isAuthenticated()"
+              [routerLink]="['/user/login']">Login</a>
+            <a *ngIf="auth.isAuthenticated()"
+              [routerLink]="['/user/profile']">Welcome
+              {{auth.currentUser.username}}</a>
           </li>
         </ul>
       </div>
-      <form id="searchForm" class="navbar-form navbar-right">
+      <form id="searchForm" class="navbar-form navbar-right"
+        (ngSubmit)="searchSession(searchTerm)">
         <div class="form-group">
-          <input type="text" class="form-control" placeholder="Search Sessions">
+          <input [(ngModel)]="searchTerm" name="searchTerm" type="text"
+            class="form-control" placeholder="Search Sessions">
         </div>
         <button class="btn btn-default">
           Search
